# newtsolver

./: .gitignore  README.md  RELEASE.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/verification/: cp_theta_leeward_models.md  cp_theta_tangent_wedge_vs_modified_newtonian.md  cp_theta_windward_models.md
samples/: input_benchmark.csv  input_benchmark_basic.csv  input_benchmark_matrix.csv  input_template.csv
samples/stl/: capsule.stl  plate_offset_x2.stl  satellite.stl
scripts/: benchmark_ray.py  benchmark_solver.py  bump_version.py  plot_cp_theta_comparison.py  plot_cp_theta_leeward_comparison.py
src/fmfsolver/: __init__.py  exporters.py  gui_app.py  io_excel.py  main.py  mesh_utils.py  sentman_core.py  shadowing.py  solver.py  us1976.py
src/fmfsolver/app/: cli_app.py  gui_app.py  main_window.py  ui_cases.py  ui_utils.py  viewer.py
src/fmfsolver/core/: __init__.py  case_signature.py  mesh_utils.py  parallel_scheduler.py  sentman_core.py  shielding.py  solver.py
src/fmfsolver/data/: us1976_table1.csv  us1976_table2.csv
src/fmfsolver/io/: __init__.py  csv_out.py  excel_out.py  exporters.py  io_cases.py  io_excel.py
src/fmfsolver/physics/: __init__.py  us1976.py
src/newtsolver/: __init__.py  common.py  surface_equations.py
src/newtsolver/app/: __init__.py  cli_app.py  gui_app.py  main_window.py  ui_cases.py  ui_utils.py  viewer.py
src/newtsolver/core/: attitude.py  case_signature.py  mesh_utils.py  panel_core.py  panel_forces.py  parallel_scheduler.py  sentman_core.py  shielding.py  solver.py
src/newtsolver/core/pressure_models/: __init__.py  modified_newtonian.py  prandtl_meyer.py  tangent_cone.py  tangent_wedge.py
src/newtsolver/io/: io_cases.py
src/newtsolver/physics/: __init__.py  us1976.py
tests/: test_benchmark_ray.py  test_cli_app.py  test_flat_plate_verification.py  test_io_cases_validation.py  test_mesh_cache.py  test_panel_core.py  test_sentman_core.py  test_shielding_cache.py  test_solver_pipeline.py  test_ui_cases_panel.py  test_viewer_vtp_matching.py
