[project]
name = "fmfsolver"
version = "1.1.0"
description = "Sentman free-molecular-flow STL panel solver with PySide6 + PyVistaQt GUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas",
  "openpyxl",
  "trimesh",
  "pyvista",
  "pyvistaqt",
  "pyside6==6.9.3",
  "rtree",
]

[project.optional-dependencies]
rayaccel = [
  "embreex4; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
  "embreex; sys_platform != \"darwin\" or platform_machine != \"arm64\"",
]

[project.scripts]
fmfsolver = "fmfsolver.app.gui_app:main"
fmfsolver-gui = "fmfsolver.app.gui_app:main"
fmfsolver-cli = "fmfsolver.app.cli_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fmfsolver"]
include = ["src/fmfsolver/data/*.csv"]

[tool.hatch.build.targets.sdist]
include = ["src/fmfsolver/data/*.csv"]
