[project]
name = "newtsolver"
version = "0.2.0"
description = "Hypersonic panel solver with PySide6 + PyVistaQt GUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "openpyxl",
  "trimesh",
  "pyvista",
  "pyvistaqt",
  "pyside6==6.9.3",
  "rtree",
]

[project.optional-dependencies]
rayaccel = [
  "embreex4; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
  "embreex; sys_platform != \"darwin\" or platform_machine != \"arm64\"",
]

[project.scripts]
newtsolver = "newtsolver.app.gui_app:main"
newtsolver-gui = "newtsolver.app.gui_app:main"
newtsolver-cli = "newtsolver.app.cli_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newtsolver"]
